--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
                         </div>
                     </div>
                     <div class="social_icons">
-                        <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"><i class="uil uil-facebook"></i></a></div>
-                        <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"><i class="uil uil-linkedin-alt"></i></a></div>
+                        <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"><i
+                                    class="uil uil-facebook"></i></a></div>
+                        <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"><i
+                                    class="uil uil-linkedin-alt"></i></a></div>
                         <div class="icon"><a href="#"><i class="uil uil-discord"></a></i></div>
-                        <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"><i class="uil uil-github-alt"></i></a></div>
+                        <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"><i
+                                    class="uil uil-github-alt"></i></a></div>
                     </div>
                 </div>
                 <div class="featured-image">
@@ -189,7 +192,7 @@
                     <h1>Projects</h1>
                 </div>
                 <div class="project-container">
-                        <div class="project-box">
+                    <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
                         <h3>Completed</h3>
                         <label>15+ Finished Projects</label>
@@ -211,28 +214,38 @@
                     <div id="second">
                         <div class="elem">
                             <img src="./assets/images/cloths.co.jfif" alt="cloth-s-website">
-                            <a href="cloth-s-website.vercel.app"><h1>Cloths.co</h1></a>
+                            <a href="cloth-s-website.vercel.app">
+                                <h1>Cloths.co</h1>
+                            </a>
                             <h5>2025</h5>
                         </div>
                         <div class="elem elem1st">
                             <img src="./assets/images/dct-hospital.jpg" alt="">
-                           <a href="https://hospital-websitemuhammadtauha.vercel.app/"><h1>Prescripto</h1></a> 
+                            <a href="https://hospital-websitemuhammadtauha.vercel.app/">
+                                <h1>Prescripto</h1>
+                            </a>
                             <h5>2024</h5>
                         </div>
                         <div class="elem elem1st">
                             <img src="./assets/images/eduford-img.jpeg" alt="">
-                            <a href="https://university-website-muhammad-mustafa.vercel.app/"><h1>eduford</h1></a>
+                            <a href="https://university-website-muhammad-mustafa.vercel.app/">
+                                <h1>eduford</h1>
+                            </a>
                             <h5>2024</h5>
-                          
+
                         </div>
                         <div class="elem elem1st">
                             <img src="./assets/images/coffee-shop.jpg" alt="">
-                            <a href="https://coffee-shopmuhammad-mustafa.vercel.app/"><h1>Cofee Shop</h1></a>
+                            <a href="https://coffee-shopmuhammad-mustafa.vercel.app/">
+                                <h1>Cofee Shop</h1>
+                            </a>
                             <h5>2024</h5>
                         </div>
                         <div class="elem elemlast elem1st">
                             <img src="./assets/images/water-plant-growth_800x.webp" alt="">
-                            <a href="https://plant-website-muhammadmustafahussain.vercel.app/"><h1>IndorePlants.</h1></a>
+                            <a href="https://plant-website-muhammadmustafahussain.vercel.app/">
+                                <h1>IndorePlants.</h1>
+                            </a>
                             <h5>2024</h5>
                         </div>
                     </div>
@@ -297,9 +310,12 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"></a><i class="uil uil-github-alt"></i></div>
-                <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"></a><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"></a><i class="uil uil-facebook"></i></div>
+                <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"></a><i
+                        class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"></a><i
+                        class="uil uil-linkedin-alt"></i></div>
+                <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"></a><i
+                        class="uil uil-facebook"></i></div>
                 <div class="icon"><a href="#"></a><i class="uil uil-discord"></i></div>
             </div>
             <div class="bottom-footer">
@@ -322,9 +338,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- ----- GSAP ScrollTrigger JS Link----- -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-        <!-- ----- SCROLL ANIMATION JS Link----- -->
+    <!-- ----- SCROLL ANIMATION JS Link----- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
