--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- --------- UNICONS ---------- -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-
     <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -61,7 +60,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="./assets/images/pdf/CV Tauha.pdf" class="btn" download>Download CV <i
+                <a href="./assets/images/pdf/cv Tauha(mernstack).pdf" class="btn" download>Download CV <i
                         class="uil uil-file-alt"></i></a>
             </div>
             <div class="nav-menu-btn">
@@ -83,7 +82,7 @@
                         <p>I'm <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>Experienced frontend developer with a passion for creating visually stunning
+                        <p>Experienced Mernstack developer with a passion for creating visually stunning
                             and user-friendly websites.
                         </p>
                     </div>
@@ -108,7 +107,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="assets/images/avatar.png" alt="avatar">
+                        <img src="assets/images/tauha.jpg" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -207,14 +206,13 @@
                         <i class="uil uil-award"></i>
                         <h3>Experience</h3>
                         <label>0.5+ Years in the field</label>
-                        <!-- <a href="https://hospital-websitemuhammadtauha.vercel.app/" target="_blank" class="explore-btn">Explore Website</a> -->
                     </div>
                 </div>
                 <div class="project-box-inner">
                     <div id="second">
                         <div class="elem">
                             <img src="./assets/images/cloths.co.jfif" alt="cloth-s-website">
-                            <a href="cloth-s-website.vercel.app">
+                            <a href="https://cloth-s-website.vercel.app/">
                                 <h1>Cloths.co</h1>
                             </a>
                             <h5>2025</h5>
