--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
                     <div class="social_icons">
                         <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"><i
                                     class="uil uil-facebook"></i></a></div>
-                        <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"><i
-                                    class="uil uil-linkedin-alt"></i></a></div>
+                            <div class="icon">
+                            <a href="https://www.linkedin.com/in/muhammad-tauha-hussain-63a268256/"><i
+                                    class="uil uil-linkedin-alt"></i></a>
+                        </div>
                         <div class="icon"><a href="#"><i class="uil uil-discord"></a></i></div>
                         <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"><i
                                     class="uil uil-github-alt"></i></a></div>
