--- a/index.html
+++ b/index.html
@@ -96,20 +96,24 @@
                         </div>
                     </div>
                     <div class="social_icons">
-                        <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"><i
-                                    class="uil uil-facebook"></i></a></div>
-                            <div class="icon">
+                        <div class="icon">
+                            <a href="https://www.facebook.com/muhammad.tauha.73"><i class="uil uil-facebook"></i></a>
+                        </div>
+                        <div class="icon">
                             <a href="https://www.linkedin.com/in/muhammad-tauha-hussain-63a268256/"><i
                                     class="uil uil-linkedin-alt"></i></a>
                         </div>
-                        <div class="icon"><a href="#"><i class="uil uil-discord"></a></i></div>
-                        <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"><i
-                                    class="uil uil-github-alt"></i></a></div>
+                        <div class="icon">
+                            <a href="#"><i class="uil uil-discord"></a></i>
+                        </div>
+                        <div class="icon">
+                            <a href="https://github.com/Muhammad-tauha-hussain"><i class="uil uil-github-alt"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="assets/images/tauha.jpg" alt="avatar">
+                        <img src="assets/images/avatar.png" alt="Tauha">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -118,9 +122,10 @@
                         <p>Scroll Down</p>
                     </a>
                 </div>
-
             </section>
+
             <!-- -------------- ABOUT BOX ---------------- -->
+
             <section class="section" id="about">
                 <div class="top-header">
                     <h1>About Me</h1>
@@ -185,13 +190,13 @@
                     </div>
                 </div>
             </section>
+            
 
-            <!-- -------------- PROJECT BOX ---------------- -->
-
+            <!-- -------------- Projects BOX ---------------- -->
             <section class="section" id="projects">
                 <div class="top-header">
                     <h1>Projects</h1>
-                </div>
+                </div>              
                 <div class="project-container">
                     <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
@@ -284,11 +289,54 @@
                     </div>
                 </div>
             </section>
-
         </main>
 
 
         <!-- --------------- FOOTER --------------- -->
+        <!-- <footer>
+            <div class="top-footer">
+                <p>Muhammad Tauha.</p>
+            </div>
+            <div class="middle-footer">
+                <ul class="footer-menu">
+                    <li class="footer_menu_list">
+                        <a href="#home">Home</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li class="footer_menu_list">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-social-icons">
+                <div class="icon">
+                    <a href="https://github.com/Muhammad-tauha-hussain"></a><i
+                        class="uil uil-github-alt"></i>
+                    </div>
+                <div class="icon">
+                    <a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"></a><i
+                        class="uil uil-linkedin-alt"></i>
+                    </div>
+                <div class="icon">
+                    <a href="https://www.facebook.com/muhammad.tauha.73"></a><i
+                        class="uil uil-facebook"></i>
+                    </div>
+                <div class="icon">
+                    <a href="#"></a><i class="uil uil-discord"></i>
+                </div>
+            </div>
+            <div class="bottom-footer">
+                <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Muhammad Tauha</a> - All rights
+                    reserved
+                </p>
+            </div>
+        </footer> -->
+
         <footer>
             <div class="top-footer">
                 <p>Muhammad Tauha.</p>
@@ -310,13 +358,26 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                <div class="icon"><a href="https://github.com/Muhammad-tauha-hussain"></a><i
-                        class="uil uil-github-alt"></i></div>
-                <div class="icon"><a href="www.linkedin.com/in/muhammad-tauha-hussain-63a268256"></a><i
-                        class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><a href="https://www.facebook.com/muhammad.tauha.73"></a><i
-                        class="uil uil-facebook"></i></div>
-                <div class="icon"><a href="#"></a><i class="uil uil-discord"></i></div>
+                <div class="icon">
+                    <a href="https://github.com/Muhammad-tauha-hussain">
+                        <i class="uil uil-github-alt"></i>
+                    </a>
+                </div>
+                <div class="icon">
+                    <a href="https://www.linkedin.com/in/muhammad-tauha-hussain-63a268256">
+                        <i class="uil uil-linkedin-alt"></i>
+                    </a>
+                </div>
+                <div class="icon">
+                    <a href="https://www.facebook.com/muhammad.tauha.73">
+                        <i class="uil uil-facebook"></i>
+                    </a>
+                </div>
+                <div class="icon">
+                    <a href="#">
+                        <i class="uil uil-discord"></i>
+                    </a>
+                </div>
             </div>
             <div class="bottom-footer">
                 <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Muhammad Tauha</a> - All rights
@@ -324,7 +385,6 @@
                 </p>
             </div>
         </footer>
-
     </div>
 
 
