--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="assets/images/avatar.png" alt="Tauha">
+                        <img src="assets/images/tauha.jpg" alt="Tauha">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
